# uri

./: CMakeLists.txt  README.md
cmake/: buildutils.cmake
examples/: basiclist.hpp  benchmarks.cpp  biglist.hpp  statictest.cpp  unittests.cpp  uriexamples.hpp  uritest.cpp
include/fix8/: uri.hpp
